# particle-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  makefile.yml
include/: draw_particle.h  gas_simulation.h  impulse_simulation.h  menu.h  movement.h  particle.h  particles.h  simulate_impulse.h  simulation.h  stb_easy_font.h  verlet.h  window_handler.h
include/2D/: simulate_gravity.h
libs/glfw/: ALL_BUILD.vcxproj  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
libs/glfw/docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile
libs/glfw/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  triangle-opengl.vcxproj  triangle-opengles.vcxproj  (+6 more)
scripts/: gas_simulation.c  impulse_simulation.c  simulate_impulse.c
src/: Makefile  draw_particle.c  main.c  menu.c  movement.c  particle.c  particles.c  simulate_gravity.c  simulate_impulse.c  simulation.c  verlet.c  verlet.h  window_handler.c
src/2D/: Makefile  draw_particle.c  movement.c  simulate_impulse.c
tests/: Makefile  test_create_particle.c  test_impulse.c  test_movement.c
(+52 files in other folders)
